--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
     "buildCommand": "npm run build",
-    "framework": "nextjs"
+    "framework": "nextjs",
+    "env": {
+        "NEXT_TELEMETRY_DISABLED": "1"
+    }
 }
