Final: Add explicit devCommand and installCommand to vercel.json to force proper build detection

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,7 @@
     "framework": "nextjs",
     "env": {
         "NEXT_TELEMETRY_DISABLED": "1"
-    }
+    },
+    "devCommand": "npm run dev",
+    "installCommand": "npm install"
 }
