--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "@vercel/analytics": "^1.6.1",
         "next": "^15.0.3",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "web-vitals": "^5.1.0"
     },
     "devDependencies": {
         "@types/node": "^20",
